// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputRadio > should render as required 1`] = `
<div>
  <radio-group
    class=""
  >
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with object array 1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="foo"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="bar"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="baz"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with string options 1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="foo"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="bar"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="baz"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with string options 2`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex items-center gap-2 flex-row-reverse"
    >
      <input
        type="radio"
        value="foo"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row-reverse"
    >
      <input
        type="radio"
        value="bar"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row-reverse"
    >
      <input
        type="radio"
        value="baz"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;

exports[`InputRadio > should render with text, value objects  1`] = `
<div>
  <radio-group
    class=""
  >
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="1"
      />
       
      <p>
        foo
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="2"
      />
       
      <p>
        bar
      </p>
    </label>
    <label
      class="flex items-center gap-2 flex-row"
    >
      <input
        type="radio"
        value="3"
      />
       
      <p>
        baz
      </p>
    </label>
    
  </radio-group>
  
</div>
`;
